spelling mistakes checked
spellings checked

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 			</div>
 
 			<div class="os-animation" data-animation="fadeIn" data-delay=".8s">
-				<h3>Become a great Math and Science Student your parents' can boost of.</h3>
+				<h3>Become a great Math and Science Student your parents can boost of.</h3>
 			</div>
 
 			<div class="os-animation" data-animation="fadeIn" data-delay="1s">
@@ -111,7 +111,7 @@
 			<div class="narrow text-center">
 				<div class="col-12">
 					<h1>About Us</h1>
-					<p class="lead">Math and Science College is a college built with you in mind. Here we train aspiring Math and Science students to become great at what they love. Not only that we run other courses as well. The founder Mr. Mawuli Addo who is so passionate about teaching is always available to make  you or your ward have the best education here in Math and Science College. We offer Pre-SHS, Home-Tuition and Vacation Classes services.</p>
+					<p class="lead">Math and Science College is a college built with you in mind. Not only do we train aspiring Math and Science students to become great at what they love but we also teach them how to think analytically. Not only that we run other courses as well. The founder Mr. Mawuli Addo who is so passionate about teaching is always available to make  you or your ward have the best education here in Math and Science College. We offer Pre-SHS, Home-Tuition and Vacation Classes services.</p>
 					<a class="btn btn-secondary btn-sm" href="#contact">We are here for you</a>
 					<a class="btn btn-custom btn-sm" href="#gallery">See Our Gallery</a>
 				</div>
@@ -643,7 +643,7 @@
 				<div class="os-animation" data-animation="fadeInUp">
 					<div class="narrow text-center">
 						<div class="col-12">
-							<p class="lead">Want to be a great a Mathematician or Scientist or Programmer?</p>
+							<p class="lead">Want to be a great Mathematician or Scientist or Programmer?</p>
 							<a class="btn btn-custom btn-sm" href="#contact">Contact Us</a>
 						</div>
 					</div>
